--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -4,7 +4,7 @@
       <h4 style="color: #fff; margin: 0">
         {{stock?.symbol?.toUpperCase()}}<br />
         {{stock?.lastTradePriceOnly | currency:'USD':true:'.2'}}<br />
-        {{stock?.change | currency:'USD':true:'.2'}} ({{stock?.changeInPercent | percent}})
+        {{stock | change}}
       </h4>
     </div>
   </span>
